# radiary

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  RENDERING_REFACTOR_PLAN.md  align_test.cpp  curves_replacement (1).cpp  fix_align.patch  fix_align2.patch  fix_align_cpp.patch  fix_align_test.patch  fix_app_window_render.patch  imgui.ini  implementation_plan.md  test_fix_bug.patch  todo.md  verify_layout.cpp
.tools/: build-minimal-ffmpeg.ps1  build-vs18-seq.cmd  build-vs18.cmd  fetch-ffmpeg.ps1
assets/presets/: big-bang.radiary  cinematic-vortex.radiary  crystal-gem.radiary  daylight-aurora.radiary  delta-one.radiary  demon-core.radiary  devoid.radiary  edge-detection.radiary  event-horizon.radiary  glass-attractor.radiary  manifold.radiary  mint-space.radiary  nebulae.radiary  neon-dreams.radiary  neutron-star.radiary  pastel-ice-cream.radiary  speed-lines.radiary  star-system.radiary  string-theory.radiary  whirpool.radiary  will-o-wisp.radiary  worldsheets.radiary  wormhole.radiary
cmake/: CPackProjectConfig.cmake.in  ConvertPngToIco.ps1
src/: main.cpp
src/app/: AppWidgets.cpp  AppWidgets.h  AppWindow.cpp  AppWindow.h  AppWindowD3D.cpp  AppWindowExport.cpp  AppWindowLayers.cpp  AppWindowRender.cpp  AppWindowUI.cpp  CameraUtils.cpp  CameraUtils.h  CpuPreviewWorker.cpp  CpuPreviewWorker.h  ExportUtils.cpp  ExportUtils.h  PreviewPresentation.h  PreviewRenderDecisions.cpp  PreviewRenderDecisions.h  RadiaryResources.rc.in  Resource.h  StartupLogoSvg.cpp  StartupLogoSvg.h
src/core/: Math.h  Scene.cpp  Scene.h
src/engine/flame/: IFSEngine.cpp  IFSEngine.h  Variation.cpp  Variation.h
src/engine/path/: SplinePath.cpp  SplinePath.h
src/io/: PresetLibrary.cpp  PresetLibrary.h  SceneSerializer.cpp  SceneSerializer.h
src/renderer/: D3D11ResourceUtils.cpp  D3D11ResourceUtils.h  D3D11ShaderUtils.cpp  D3D11ShaderUtils.h  Effect.h  Effects.cpp  GpuDenoiser.cpp  GpuDenoiser.h  GpuDofRenderer.cpp  GpuDofRenderer.h  GpuFlameRenderer.cpp  GpuFlameRenderer.h  GpuFrame.h  GpuPassParams.h  GpuPathRenderer.cpp  GpuPathRenderer.h  GpuPostProcess.cpp  GpuPostProcess.h  PathDrawListBuilder.cpp  PathDrawListBuilder.h  RenderMath.h  SoftwareRenderer.cpp  SoftwareRenderer.h
src/renderer/backend/: D3D11RenderBackend.cpp  RenderBackend.h
src/renderer/shaders/: GpuDenoiser.hlsl  GpuDofRenderer.hlsl  GpuFlameRenderer.hlsl  GpuPathRenderer.hlsl  GpuPostProcess.hlsl
tests/: PathDrawListBuilderTests.cpp  PreviewRenderDecisionsTests.cpp  SceneCoreTests.cpp  SceneKeyframeEvaluationTests.cpp  SceneSerializerTests.cpp  TestHarness.h  TestMain.cpp
tmp/: clean_renderer.ps1  clean_renderer_v2.ps1  patch_cmake.ps1
